@@ -1,4 +1,6 @@
 	* fix tail-padding for last file in create_torrent
+	* don't send user-agent in metadata http downloads or UPnP requests when
+	  in anonymous mode
 	* fix internal resolve links lookup for mutable torrents
 	* hint DHT bootstrap nodes of actual bootstrap request
 
